<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app"
    android:paddingBottom="@dimen/double_margin"
    android:paddingLeft="@dimen/double_margin"
    android:paddingRight="@dimen/double_margin"
    android:paddingTop="@dimen/double_margin" >

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/logoLogin"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/half_margin"
    	android:paddingLeft="@dimen/half_margin"
    	android:paddingRight="@dimen/half_margin"
    	android:paddingTop="@dimen/half_margin"
        android:orientation="vertical"
        android:background="@color/white" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/username_email" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/password" 
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/login"
            android:background="@color/loginButton"
            android:fontFamily="sans-serif"
            android:textSize="22sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/errorLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/logoLogin"
        android:layout_above="@id/linearLayout1"
        android:text="" />

</RelativeLayout>